Updating notebook with data cleaning

--- a/Churn-Multivariate-Logistic-Regression.ipynb
+++ b/Churn-Multivariate-Logistic-Regression.ipynb
@@ -2,26 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "80d4ebc7-765b-4f91-bad0-a2b1f0d6f550",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Suppress Warnings\n",
-    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "b341ecc2-c880-453d-8f12-82fdd9027bd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "\n",
     "import pandas as pd, numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "aea63821-bced-4a90-8d74-7808ef01d861",
    "metadata": {},
    "outputs": [
@@ -157,21 +155,20 @@
        "4           Electronic check           70.70       151.65   Yes  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Import the datasets\n",
-    "\n",
     "churn_data = pd.read_csv(\"churn_data.csv\")\n",
     "churn_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "f43a7527-55ed-4602-ac95-011cd3222e4a",
    "metadata": {},
    "outputs": [
@@ -257,7 +254,7 @@
        "4  9237-HQITU  Female              0      No         No"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "5fef6ef4-4860-4fd0-923f-cb3b42035a6a",
    "metadata": {},
    "outputs": [
@@ -386,7 +383,7 @@
        "4               No          No          No              No  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "21f866a5-be7a-4123-bf60-c2a4b1d8604b",
    "metadata": {},
    "outputs": [],
@@ -409,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "fd1df2f5-d8a9-4aa9-bccb-df32745a80ab",
    "metadata": {},
    "outputs": [],
@@ -420,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "d846296a-0047-4005-b0b4-55029a44c7ca",
    "metadata": {},
    "outputs": [
@@ -515,7 +512,7 @@
        "max      72.000000      118.750000       1.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "db86862c-f832-4ef3-ae7c-6997d1c84329",
    "metadata": {},
    "outputs": [
@@ -571,8 +568,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "21c266d3-90d1-4b16-a903-f44f84ed623f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoding binary variables\n",
+    "\n",
+    "varlist =  ['PhoneService', 'PaperlessBilling', 'Churn', 'Partner', 'Dependents']\n",
+    "\n",
+    "def binary_map(x):\n",
+    "    return x.map({'Yes': 1, \"No\": 0})\n",
+    "\n",
+    "telecom[varlist] = telecom[varlist].apply(binary_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0277cffe-0775-4aa7-973a-6865fc7d9d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoding categorical variables and one shot dropping\n",
+    "dummy1 = pd.get_dummies(telecom[['Contract', 'PaymentMethod', 'gender', 'InternetService']], drop_first=True)\n",
+    "\n",
+    "telecom = pd.concat([telecom, dummy1], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "58abe999-3fe4-451c-a047-887590e3b858",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "DataFrame.drop() takes from 1 to 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m ml \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mget_dummies(telecom[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMultipleLines\u001b[39m\u001b[38;5;124m'\u001b[39m], prefix\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMultipleLines\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Dropping MultipleLines_No phone service column\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m ml1 \u001b[38;5;241m=\u001b[39m ml\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMultipleLines_No phone service\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#Adding the results to the master dataframe\u001b[39;00m\n\u001b[1;32m      8\u001b[0m telecom \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([telecom,ml1], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: DataFrame.drop() takes from 1 to 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating dummy variables for addl categorical variables and dropping the level\n",
+    "\n",
+    "# Creating dummy variables for the variable 'MultipleLines'\n",
+    "ml = pd.get_dummies(telecom['MultipleLines'], prefix='MultipleLines')\n",
+    "# Dropping MultipleLines_No phone service column\n",
+    "ml1 = ml.drop(['MultipleLines_No phone service'], 1)\n",
+    "#Adding the results to the master dataframe\n",
+    "telecom = pd.concat([telecom,ml1], axis=1)\n",
+    "\n",
+    "# Creating dummy variables for the variable 'OnlineSecurity'.\n",
+    "os = pd.get_dummies(telecom['OnlineSecurity'], prefix='OnlineSecurity')\n",
+    "os1 = os.drop(['OnlineSecurity_No internet service'], 1)\n",
+    "# Adding the results to the master dataframe\n",
+    "telecom = pd.concat([telecom,os1], axis=1)\n",
+    "\n",
+    "# Creating dummy variables for the variable 'OnlineBackup'.\n",
+    "ob = pd.get_dummies(telecom['OnlineBackup'], prefix='OnlineBackup')\n",
+    "ob1 = ob.drop(['OnlineBackup_No internet service'], 1)\n",
+    "# Adding the results to the master dataframe\n",
+    "telecom = pd.concat([telecom,ob1], axis=1)\n",
+    "\n",
+    "# Creating dummy variables for the variable 'DeviceProtection'. \n",
+    "dp = pd.get_dummies(telecom['DeviceProtection'], prefix='DeviceProtection')\n",
+    "dp1 = dp.drop(['DeviceProtection_No internet service'], 1)\n",
+    "# Adding the results to the master dataframe\n",
+    "telecom = pd.concat([telecom,dp1], axis=1)\n",
+    "\n",
+    "# Creating dummy variables for the variable 'TechSupport'. \n",
+    "ts = pd.get_dummies(telecom['TechSupport'], prefix='TechSupport')\n",
+    "ts1 = ts.drop(['TechSupport_No internet service'], 1)\n",
+    "# Adding the results to the master dataframe\n",
+    "telecom = pd.concat([telecom,ts1], axis=1)\n",
+    "\n",
+    "# Creating dummy variables for the variable 'StreamingTV'.\n",
+    "st =pd.get_dummies(telecom['StreamingTV'], prefix='StreamingTV')\n",
+    "st1 = st.drop(['StreamingTV_No internet service'], 1)\n",
+    "# Adding the results to the master dataframe\n",
+    "telecom = pd.concat([telecom,st1], axis=1)\n",
+    "\n",
+    "# Creating dummy variables for the variable 'StreamingMovies'. \n",
+    "sm = pd.get_dummies(telecom['StreamingMovies'], prefix='StreamingMovies')\n",
+    "sm1 = sm.drop(['StreamingMovies_No internet service'], 1)\n",
+    "# Adding the results to the master dataframe\n",
+    "telecom = pd.concat([telecom,sm1], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d8ed3b5-bc12-417b-8231-db5352e70d0a",
    "metadata": {},
    "outputs": [],
    "source": []
